--- a/environment.yml
+++ b/environment.yml
@@ -18,3 +18,7 @@ dependencies:
     - submodules/diff-gaussian-rasterization
     - submodules/simple-knn
     - opencv-python
+
+  # pip install submodules/diff-gaussian-rasterization
+  # pip install submodules/simple-knn
+  # pip install torch==1.12.1+cu116 torchvision==0.13.1+cu116 torchaudio==0.12.1 --extra-index-url https://download.pytorch.org/whl/cu116
